# incident-copilot

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/sample/: incidents.jsonl
docs/: HANDOFF.md  IMPLEMENTATION_PLAN.md
eval/: eval_rag.py  golden_cases.json
prompts/: rag_analysis.txt  synthetic_incident.txt
scripts/: build_index.py  eval_classifier.py  fetch_github_issues.py  generate_synthetic.py  process_data.py  run_all.py  train_classifier.py
src/: __init__.py  config.py  schema.py
src/api/: main.py  models.py
src/classifier/: __init__.py  categories.py  model.py
src/data/: __init__.py  github_ingestion.py  incident_store.py  loader.py  synthetic_generator.py
src/embedding/: __init__.py  embedder.py  index.py
src/rag/: __init__.py  graph.py  graph_state.py  llm_client.py  pipeline.py  retriever.py
tests/: __init__.py  test_classifier.py  test_github_ingestion.py  test_graph.py  test_incident_store.py  test_retrieval.py  test_schema.py
ui/: app.py
